fixed card alignment

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -2,6 +2,8 @@
   margin-top: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 footer {
